--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "index.js"
   ],
   "dependencies": {
-    "base-input": "~1.3.1",
     "command-copy": "~1.0.0",
     "dover": "~1.1.0",
     "value-event": "~5.1.0",
+    "virtual-dom": "^2.0.0",
     "weakmap-event": "~2.0.6",
     "xtend": "~4.0.1"
   }
